TracerPreferences - replace obsolete new Integer(int) construction